[frontend] fix more input overflow issue in AiAssistBar

--- a/desktop/core/src/desktop/js/apps/editor/components/AiAssist/AiAssistToolbar/AiAssistToolbarInput.scss
+++ b/desktop/core/src/desktop/js/apps/editor/components/AiAssist/AiAssistToolbar/AiAssistToolbarInput.scss
@@ -61,7 +61,7 @@ $semi-transparent-background: rgba(237, 247, 255, 0.5);
   // Used as a reference element for measuring the width of the input
   // which is needed to create a growing input field.
   .hue-ai-assist-toolbar-input__size-reference-element {
-    // visibility: hidden;
+    visibility: hidden;
     white-space: pre-wrap;
     overflow-wrap: break-all;
     border: 1px dotted red;
